--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
 <p>Tel: +919664577297</p>
-<p>email:gadhiyakyana@gmail.com</p>
+<p>Email: gadhiyakyana@gmail.com</p>
 <p>Address:</p>
 <p>
-  gopal nagar<br />
+  123 North Street<br />
   rajkot City<br />
   india Country <br />
 </p>
